main structure of the Personal

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
 
       <!-- Work -->
       <section id="projects" class="projects">
-        <h2>My Projects</h2>
+        <h2>Projects (content)</h2>
         <ul class="project-list" style="list-style-type: none">
           <li>
-            <a href="/videos.html">🎬 Videos</a>
+            <a href="/videos.html">🤝 Volunteer Videos</a>
+          </li>
+          <li>
+            <a href="/videosPersonal.html">🎥 Personal Videos</a>
           </li>
           <li>
             <a href="/pictures.html">🖼️ My Pictures</a>
