--- a/videos.html
+++ b/videos.html
@@ -11,8 +11,8 @@
       <nav class="navbar">
         <div class="logo">Mohamed</div>
         <ul class="nav-links">
+          <li><a href="/index.html">About</a></li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="videos.html">Videos</a></li>
           <li><a href="pictures.html">Pictures</a></li>
         </ul>
       </nav>
@@ -22,18 +22,240 @@
         <h2>🎬 My Video Projects</h2>
         <ul class="project-list" style="list-style-type: none">
           <li>
-            <a href="https://youtube.com/link-to-video1" target="_blank"
-              >Video Project 1</a
+            <a
+              href="https://www.instagram.com/reel/DOeRlF3DTgF/?utm_source=ig_web_copy_link"
+              target="_blank"
+              >volunteer video 1
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DOVwUVulCQe/?utm_source=ig_web_copy_link"
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 2</a
             >
           </li>
           <li>
-            <a href="https://vimeo.com/link-to-video2" target="_blank"
-              >Video Project 2</a
+            <a
+              href="https://www.instagram.com/reel/DOOp4MtD3xo/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 3</a
             >
           </li>
           <li>
-            <a href="https://drive.google.com/link-to-video3" target="_blank"
-              >Video Project 3</a
+            <a
+              href="https://www.instagram.com/reel/DK9LWU3NTuZ/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 4</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DI6oRulyh6n/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 5</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DHvNncMNOAc/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 6</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DF0iBCANt5H/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 7</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DFDC4W5N8GM/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 8</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DEUE7xLsWCq/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 9</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DCCQse5BHi7/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 10</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DB8Rxcft0rz/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 11</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DBy7nKANo0p/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 12</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DA5WZ8KPTq5/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 13</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C_Duovdtww3/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 14</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C9MYn88y3hV/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 15</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C8_8OyoNC6C/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 16</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C5OlMk8LI0O/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 17</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C49Hi5ltxtE/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 18</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C49Ca6kNmVI/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 19</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C456hiktRAM/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 20</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C4wEY_ru6tm/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+            >
+              volunteer video 21</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C4Fu8fENwn0/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 22</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C4VovMHrWuR/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 23</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/DOVwUVulCQe/?utm_source=ig_web_copy_link"
+              target="_blank"
+              >volunteer video 24</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C3zZkHrrI0W/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              ><span style="color: gold; font-size: 24px">&#9733;</span>
+              volunteer video 25 (exceptional)</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C2hb-R3L3bQ/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 26</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C2mjPHJt-BW/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 27</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C2pT_Q1Jvfg/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 28</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C2shRl9uybE/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 29</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C2u42lvND4L/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 30</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/C2xXIRkrALA/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 31</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/reel/Cwx-jbqrwRP/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+              target="_blank"
+              >volunteer video 32</a
             >
           </li>
         </ul>
