adding image to the first bg image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
       <nav class="navbar">
-        <div class="logo">portfolio</div>
+        <div class="logo">Personal portfolio</div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li>
@@ -66,7 +66,7 @@
             <a href="/videosPersonal.html">🎥 Personal Videos</a>
           </li>
           <li>
-            <a href="/pictures.html">🖼️ My Pictures</a>
+            <a href="/pictures.html">📸 photography</a>
           </li>
         </ul>
       </section>
@@ -99,7 +99,9 @@
     <footer>
       <p>
         © 2025 Mohamed Alsaegh. All rights not reserved . Feel free to steal the
-        template.
+        <a href="https://github.com/MohamedAlsaegh/portfolio" class="templet"
+          >template</a
+        >.
       </p>
     </footer>
   </body>
