--- a/videos.html
+++ b/videos.html
@@ -258,11 +258,19 @@
               >volunteer video 32</a
             >
           </li>
+          <li>
+            <h3>etc...</h3>
+          </li>
         </ul>
       </section>
     </main>
     <footer>
-      <p>© 2025 Mohamed. All rights reserved.</p>
+      <p>
+        © 2025 Mohamed Alsaegh. All rights not reserved . Feel free to steal the
+        <a href="https://github.com/MohamedAlsaegh/portfolio" class="templet"
+          >template</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
