--- a/pictures.html
+++ b/pictures.html
@@ -40,7 +40,12 @@
       </section>
     </main>
     <footer>
-      <p>© 2025 Mohamed. All rights reserved.</p>
+      <p>
+        © 2025 Mohamed Alsaegh. All rights not reserved . Feel free to steal the
+        <a href="https://github.com/MohamedAlsaegh/portfolio" class="templet"
+          >template</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
