portfolio is ready

--- a/pictures.html
+++ b/pictures.html
@@ -11,31 +11,34 @@
       <nav class="navbar">
         <div class="logo">Mohamed</div>
         <ul class="nav-links">
+          <li><a href="/index.html">About</a></li>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/videos.html">Videos</a></li>
-          <li><a href="/pictures.html">Pictures</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="content">
         <h2>🖼️ My Pictures</h2>
-        <ul class="project-list" style="list-style-type: none">
-          <li>
-            <a href="https://drive.google.com/link-to-picture1" target="_blank"
-              >Picture 1</a
-            >
-          </li>
-          <li>
-            <a href="https://drive.google.com/link-to-picture2" target="_blank"
-              >Picture 2</a
-            >
-          </li>
-          <li>
-            <a href="https://drive.google.com/link-to-picture3" target="_blank"
-              >Picture 3</a
-            >
-          </li>
+        <ul class="pic-project-list" style="list-style-type: none">
+          <li><img src="assets/🐝.jpg" /></li>
+          <li><img src="assets/1.jpg" /></li>
+          <li><img src="assets/2.jpg" /></li>
+          <li><img src="assets/3.jpg" /></li>
+          <li><img src="assets/4.jpg" /></li>
+          <li><img src="assets/5.jpg" /></li>
+          <li><img src="assets/6.jpg" /></li>
+          <li><img src="assets/7.jpg" /></li>
+          <li><img src="assets/8.jpg" /></li>
+          <li><img src="assets/9.jpg" /></li>
+          <li><img src="assets/11.jpg" /></li>
+          <li><img src="assets/12.jpg" /></li>
+          <li><img src="assets/13.jpg" /></li>
+          <li><img src="assets/14.jpg" /></li>
+          <li><img src="assets/15.jpg" /></li>
+          <li><img src="assets/16.jpg" /></li>
+
+          <h3>etc...</h3>
         </ul>
       </section>
     </main>
