--- a/videos.html
+++ b/videos.html
@@ -32,8 +32,10 @@
             <a
               href="https://www.instagram.com/reel/DOVwUVulCQe/?utm_source=ig_web_copy_link"
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 2</a
+              class="gold"
+            >
+              volunteer video 2
+              <span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
@@ -68,17 +70,19 @@
             <a
               href="https://www.instagram.com/reel/DF0iBCANt5H/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 7</a
+              class="gold"
+            >
+              volunteer video 7
+              <span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
             <a
               href="https://www.instagram.com/reel/DFDC4W5N8GM/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 8</a
-            >
+              class="gold"
+              >volunteer video 8 <span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -91,16 +95,18 @@
             <a
               href="https://www.instagram.com/reel/DCCQse5BHi7/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 10</a
+              class="gold"
+            >
+              volunteer video 10 <span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
             <a
               href="https://www.instagram.com/reel/DB8Rxcft0rz/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 11</a
+              class="gold"
+            >
+              volunteer video 11 <span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
@@ -114,9 +120,9 @@
             <a
               href="https://www.instagram.com/reel/DA5WZ8KPTq5/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 13</a
-            >
+              class="gold"
+              >volunteer video 13 <span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -129,9 +135,10 @@
             <a
               href="https://www.instagram.com/reel/C9MYn88y3hV/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 15</a
-            >
+              class="gold"
+              >volunteer video 15
+              <span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -144,9 +151,9 @@
             <a
               href="https://www.instagram.com/reel/C5OlMk8LI0O/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 17</a
-            >
+              class="gold"
+              >volunteer video 17 <span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -159,17 +166,19 @@
             <a
               href="https://www.instagram.com/reel/C49Ca6kNmVI/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 19</a
+              class="gold"
+            >
+              volunteer video 19<span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
             <a
               href="https://www.instagram.com/reel/C456hiktRAM/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 20</a
-            >
+              class="gold"
+              >volunteer video 20
+              <span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -183,8 +192,9 @@
             <a
               href="https://www.instagram.com/reel/C4Fu8fENwn0/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 22</a
+              class="gold"
+            >
+              volunteer video 22 <span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
@@ -205,9 +215,10 @@
             <a
               href="https://www.instagram.com/reel/C3zZkHrrI0W/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              volunteer video 25 (exceptional)</a
-            >
+              class="gold"
+              >volunteer video 25 (exceptional)
+              <span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
