--- a/videosPersonal.html
+++ b/videosPersonal.html
@@ -46,9 +46,9 @@
             <a
               href="https://www.instagram.com/reel/C_hmpnDNSf1/?utm_source=ig_web_copy_link"
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              Personal video 4</a
-            >
+              class="gold"
+              >Personal video 4<span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -61,9 +61,9 @@
             <a
               href="https://www.instagram.com/reel/CxIS4POtSfH/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              Personal video 6</a
-            >
+              class="gold"
+              >Personal video 6<span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -85,9 +85,9 @@
             <a
               href="https://www.instagram.com/reel/CrqT9tWr2TJ/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
-              ><span style="color: gold; font-size: 24px">&#9733;</span>
-              Personal video 9</a
-            >
+              class="gold"
+              >Personal video 9<span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
@@ -101,9 +101,9 @@
             <a
               href="https://www.instagram.com/reel/Co85qXetYEx/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
+              class="gold"
             >
-              <span style="color: gold; font-size: 24px">&#9733;</span> Personal
-              video 11</a
+              Personal video 11<span style="color: gold">&#9733;</span></a
             >
           </li>
           <li>
@@ -134,10 +134,10 @@
             <a
               href="https://www.instagram.com/reel/Ch4nz3oJ3ee/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
+              class="gold"
             >
-              <span style="color: gold; font-size: 24px">&#9733;</span> Personal
-              video 15</a
-            >
+              Personal video 15<span style="color: gold">&#9733;</span>
+            </a>
           </li>
           <li>
             <a
