preventing right clights to open the list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mohamed | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <!-- Header -->
     <header>
       <nav class="navbar">
