--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@
     <title>My Video Projects</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <header>
       <nav class="navbar">
         <div class="logo">Mohamed</div>
